# bee2bee

./: .gitignore  PROJECT_CONTEXT.md  README.md  check_supabase_data.py  configure_frontend_backend.py  frontend_env_example.py  package.json  pnpm-lock.yaml
agents/: .env.example  .gitignore  README.md  requirements.txt
agents/autonomous-agents-system/: .env.example  README.md  bridge_http_mailbox.py  http_server_frontend.py  orchestrator.py  orchestrator_local.py  orchestrator_uagents.py  requirements.txt  supabase_agent_client.py  supreme_unified_orchestrator.py  supreme_unified_orchestrator_agent.py  test_skill_matcher_supabase.py  test_supabase_working.py
agents/bounty-matcher-agent/: .env.example  INTELLIGENCE_COMPARISON.md  README.md  agent.py  requirements.txt
agents/local-agent/: agent_sigmar.py  agent_slaanesh.py
agents/protocols/: book.py  intelligence_protocol.py
agents/remote-agent/: remote_agents_sigmar.py  remote_agents_slaanesh.py
agents/repository-analyzer/: .env.example  CHANGELOG.md  README.md  agent.py  requirements.txt
agents/security-agent/: .env.example  agent.py  requirements.txt
agents/smart-agents/: CONSENSUS_LAYER_README.md  consensus_synthesizer.py  example_queries.py  intent_classifier.py  llm_integration.py  orchestrator.py  orchestrator_autonomous.py  smart_agents_server.py  start_smart_agents.sh  test_smart_agents.py
agents/testing-agents/: agent_sigmar_http.py  agent_slaanesh_http.py  api_server_http.py  (+3 more)
bee2bee-indexer/: .env.example  .gitignore  pyproject.toml  requirements.txt  setup_wsl.sh  test_simple.py  test_without_chroma.py
bee2bee-indexer/examples/: basic_usage.py
bee2bee-indexer/src/: __init__.py
bee2bee-indexer/src/chunkers/: function_chunker.py
bee2bee-indexer/src/core/: config.py  indexer.py  types.py
bee2bee-indexer/src/embeddings/: dual_embedder.py
bee2bee-indexer/src/gh_client/: client.py
bee2bee-indexer/src/parsers/: tree_sitter_parser.py
bee2bee-indexer/src/storage/: chroma_store.py
docs/: RAG_SYSTEM_QUERIES.md
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
n8n/: .env.example  .gitignore  Dockerfile.custom  compose.yaml  ngrok.yml
supabase/: README.md  config.toml  package-lock.json
(+123 files in other folders)
